Solution for counting bit

--- a/resource/input.properties
+++ b/resource/input.properties
@@ -2,6 +2,7 @@
 vulk.leetcode.easy.SummaryRanges = \\easy\\summaryRanges
 vulk.leetcode.easy.CountWordsWithPrefix = \\easy\\countWordWithPrefix
 vulk.leetcode.easy.MergeTwoSortedLst = \\easy\\mergeTwoSortedLst
+vulk.leetcode.easy.CountingBits = \\easy\\countingBits
 
 #Medium Problem
 vulk.leetcode.medium.AddTwoNumber = \\medium\\addTwoNumber
