--- a/resource/input.properties
+++ b/resource/input.properties
@@ -3,6 +3,7 @@ vulk.leetcode.easy.SummaryRanges = \\easy\\summaryRanges
 vulk.leetcode.easy.CountWordsWithPrefix = \\easy\\countWordWithPrefix
 vulk.leetcode.easy.MergeTwoSortedLst = \\easy\\mergeTwoSortedLst
 vulk.leetcode.easy.CountingBits = \\easy\\countingBits
+vulk.leetcode.easy.LongestCommonPrefix = \\easy\\longestCommonPrefix
 
 #Medium Problem
 vulk.leetcode.medium.AddTwoNumber = \\medium\\addTwoNumber
