Implement loading solution from config

--- a/resource/input.properties
+++ b/resource/input.properties
@@ -1,3 +1,6 @@
+#Configuration
+target = vulk.leetcode.easy.SummaryRanges 
+
 # Easy Problem
 vulk.leetcode.easy.SummaryRanges = \\easy\\summaryRanges
 vulk.leetcode.easy.CountWordsWithPrefix = \\easy\\countWordWithPrefix
