--- a/resource/input.properties
+++ b/resource/input.properties
@@ -1,5 +1,5 @@
 #Configuration
-target = vulk.leetcode.easy.SummaryRanges 
+target = vulk.leetcode.medium.L82RemoveDuplicationFromSortList 
 
 # Easy Problem
 vulk.leetcode.easy.SummaryRanges = \\easy\\summaryRanges
@@ -12,3 +12,4 @@ vulk.leetcode.easy.LongestCommonPrefix = \\easy\\longestCommonPrefix
 #Medium Problem
 vulk.leetcode.medium.AddTwoNumber = \\medium\\addTwoNumber
 vulk.leetcode.medium.MinStepAnagram = \\medium\\MinStepAnagram
+vulk.leetcode.medium.L82RemoveDuplicationFromSortList = \\medium\\82_remove-duplicates-from-sorted-list-ii
