Solution for: https://leetcode.com/problems/copy-list-with-random-pointer/

--- a/resource/input.properties
+++ b/resource/input.properties
@@ -13,3 +13,4 @@ vulk.leetcode.easy.LongestCommonPrefix = \\easy\\longestCommonPrefix
 vulk.leetcode.medium.AddTwoNumber = \\medium\\addTwoNumber
 vulk.leetcode.medium.MinStepAnagram = \\medium\\MinStepAnagram
 vulk.leetcode.medium.L82RemoveDuplicationFromSortList = \\medium\\82_remove-duplicates-from-sorted-list-ii
+vulk.leetcode.medium.L138CopyListWithRandomPointer = \\medium\\138_copy-list-with-random-pointer
